// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`choices > N choices render (text + per-choice observe) 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "pointer_events": "auto",
      },
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/observe",
    "params": {
      "element": "e-1",
      "event": "click",
      "once": false,
      "stopPropagation": true,
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-2",
      "style": {
        "pointer_events": "auto",
      },
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/observe",
    "params": {
      "element": "e-2",
      "event": "click",
      "once": false,
      "stopPropagation": true,
    },
  },
  {
    "id": "req-5",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "style": {
        "pointer_events": "auto",
      },
    },
  },
  {
    "id": "req-6",
    "kind": "request",
    "method": "ui/observe",
    "params": {
      "element": "e-3",
      "event": "click",
      "once": false,
      "stopPropagation": true,
    },
  },
  {
    "id": "req-7",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "Apple",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-8",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [
        {
          "control": "show",
          "text": "Apple",
        },
      ],
      "target": "choice 0",
    },
  },
  {
    "id": "req-9",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "Banana",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-2",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-10",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [
        {
          "control": "show",
          "text": "Banana",
        },
      ],
      "target": "choice 1",
    },
  },
  {
    "id": "req-11",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "Cherry",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-12",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [
        {
          "control": "show",
          "text": "Cherry",
        },
      ],
      "target": "choice 2",
    },
  },
]
`;

exports[`choices > click first choice → clear + advance round-trip > ui-after-click 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [],
      "target": "choice 0",
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-2",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [],
      "target": "choice 1",
    },
  },
  {
    "id": "req-5",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-6",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [],
      "target": "choice 2",
    },
  },
  {
    "id": "req-7",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-8",
    "kind": "request",
    "method": "ui/write-image",
    "params": {
      "instant": true,
      "instructions": [],
      "target": "choice 0",
    },
  },
  {
    "id": "req-9",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-2",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-10",
    "kind": "request",
    "method": "ui/write-image",
    "params": {
      "instant": true,
      "instructions": [],
      "target": "choice 1",
    },
  },
  {
    "id": "req-11",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-12",
    "kind": "request",
    "method": "ui/write-image",
    "params": {
      "instant": true,
      "instructions": [],
      "target": "choice 2",
    },
  },
  {
    "id": "req-13",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "pointer_events": "auto",
      },
    },
  },
  {
    "id": "req-14",
    "kind": "request",
    "method": "ui/unobserve",
    "params": {
      "element": "e-1",
      "event": "click",
    },
  },
  {
    "id": "req-15",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-16",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-2",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-17",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-18",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-4",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-19",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [],
      "target": "dialogue",
    },
  },
  {
    "id": "req-20",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-21",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [],
      "target": "choice 0",
    },
  },
  {
    "id": "req-22",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-2",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-23",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [],
      "target": "choice 1",
    },
  },
  {
    "id": "req-24",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-25",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [],
      "target": "choice 2",
    },
  },
  {
    "id": "req-26",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-4",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-27",
    "kind": "request",
    "method": "ui/write-image",
    "params": {
      "instant": true,
      "instructions": [],
      "target": "dialogue",
    },
  },
  {
    "id": "req-28",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-29",
    "kind": "request",
    "method": "ui/write-image",
    "params": {
      "instant": true,
      "instructions": [],
      "target": "choice 0",
    },
  },
  {
    "id": "req-30",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-2",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-31",
    "kind": "request",
    "method": "ui/write-image",
    "params": {
      "instant": true,
      "instructions": [],
      "target": "choice 1",
    },
  },
  {
    "id": "req-32",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-33",
    "kind": "request",
    "method": "ui/write-image",
    "params": {
      "instant": true,
      "instructions": [],
      "target": "choice 2",
    },
  },
  {
    "id": "req-34",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "hidden": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-5",
      "style": undefined,
    },
  },
  {
    "id": "req-35",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-6",
      "style": {
        "opacity": "1",
      },
    },
  },
]
`;
